--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "express": "^4.18.1",
     "typescript": "^4.8.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/node": "^18.7.18"
   }
 }
